--- a/src/main/resources/com/example/cms/manage-course.fxml
+++ b/src/main/resources/com/example/cms/manage-course.fxml
@@ -11,7 +11,7 @@
    <children>
       <VBox layoutX="80.0" layoutY="130.0" prefHeight="460.0" prefWidth="730.0">
          <children>
-            <Button fx:id="btnAddCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Yangi kurs qo'shish" textFill="WHITE">
+            <Button fx:id="btnAddCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#addCourse" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Yangi kurs qo'shish" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -25,7 +25,7 @@
                   <Insets bottom="35.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="btnUpdateCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Kurs ma'lumotlarini yangilash" textFill="WHITE">
+            <Button fx:id="btnUpdateCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#updateCourse" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Kurs ma'lumotlarini yangilash" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -39,7 +39,7 @@
                   <Insets bottom="35.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="btnDeleteCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Kurs ma'lumotlarini o'chirish" textFill="WHITE">
+            <Button fx:id="btnDeleteCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#deleteCourse" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Kurs ma'lumotlarini o'chirish" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -50,7 +50,7 @@
                   <Insets left="35.0" />
                </padding>
             </Button>
-            <Button fx:id="btnShowCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Kurs ma'lumotlarini ko'rish" textFill="WHITE">
+            <Button fx:id="btnShowCourse" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#showCourse" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="Kurs ma'lumotlarini ko'rish" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
