admin panel full2

--- a/src/main/resources/com/example/cms/Admin/Students/delete-student.fxml
+++ b/src/main/resources/com/example/cms/Admin/Students/delete-student.fxml
@@ -32,12 +32,12 @@
             </Label>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
-                  <Label prefHeight="53.0" prefWidth="449.0" text="O'chirmoqchi bo’lgan student emailini kiriting">
+                  <Label prefHeight="53.0" prefWidth="457.0" text="O'chirmoqchi bo’lgan student telefonini kiriting">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="emailField" prefHeight="53.0" prefWidth="270.0" style="-fx-background-color: transparent; -fx-border-color: #000; -fx-border-width: 1px; -fx-border-radius: 10px;">
+                  <TextField fx:id="phoneField" prefHeight="53.0" prefWidth="270.0" style="-fx-background-color: transparent; -fx-border-color: #000; -fx-border-width: 1px; -fx-border-radius: 10px;">
                      <HBox.margin>
                         <Insets left="30.0" />
                      </HBox.margin>
