--- a/src/main/resources/com/example/cms/Admin/Teachers/update-teacher.fxml
+++ b/src/main/resources/com/example/cms/Admin/Teachers/update-teacher.fxml
@@ -60,9 +60,9 @@
             </Label>
          </children>
       </VBox>
-      <VBox layoutX="205.0" layoutY="214.0" prefHeight="360.0" prefWidth="480.0">
+      <VBox layoutX="200.0" layoutY="214.0" prefHeight="496.0">
          <children>
-            <HBox prefHeight="50.0" prefWidth="200.0">
+            <HBox prefHeight="50.0" prefWidth="452.0">
                <children>
                   <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="80.0" text="Ismi">
                      <font>
@@ -77,7 +77,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" left="100.0" />
+                        <Insets bottom="10.0" left="100.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -97,7 +97,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" left="30.0" />
+                        <Insets bottom="10.0" left="30.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -117,14 +117,14 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" />
+                        <Insets bottom="10.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
-                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="116.0" text="Fani">
+                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="118.0" text="Fani">
                      <font>
                         <Font size="26.0" />
                      </font>
@@ -137,14 +137,34 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" left="60.0" />
+                        <Insets bottom="10.0" left="60.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
-                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="119.0" text="username">
+                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="128.0" text="Guruhi">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="groupField" prefHeight="50.0" prefWidth="320.0" style="-fx-border-radius: 10px; -fx-border-width: 1px; -fx-border-color: #000; -fx-background-color: transparent;">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="50.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <HBox prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="130.0" text="username">
                      <font>
                         <Font size="26.0" />
                      </font>
@@ -157,14 +177,14 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" left="50.0" />
+                        <Insets bottom="10.0" left="50.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
-                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="116.0" text="Parol">
+                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="118.0" text="parol">
                      <font>
                         <Font size="26.0" />
                      </font>
@@ -177,22 +197,25 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" left="60.0" />
+                        <Insets bottom="10.0" left="60.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
+            <Button mnemonicParsing="false" onAction="#updateTeacher" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #0073FF; -fx-background-radius: 10px;" text="yangilash" textFill="WHITE">
+               <VBox.margin>
+                  <Insets left="330.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </VBox>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="535.0" layoutY="624.0" mnemonicParsing="false" onAction="#updateTeacher" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #0073FF; -fx-background-radius: 10px;" text="yangilash" textAlignment="RIGHT" textFill="WHITE">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Label fx:id="statusLabel" layoutX="205.0" layoutY="637.0">
+      <Label fx:id="statusLabel" layoutX="205.0" layoutY="667.0">
          <font>
             <Font size="16.0" />
          </font>
